# point-cloud-annotation-tool

./: Annotation.cpp  Annotation.h  CMakeLists.txt  common.h  example.pcd  main.cpp  mainwindow.ui  visualizer.cpp  visualizer.h  vtkAnnotationBoxSource.cpp  vtkAnnotationBoxSource.h  vtkBoxWidgetCallback.cpp  vtkBoxWidgetCallback.h  vtkBoxWidgetRestricted.cpp  vtkBoxWidgetRestricted.h
config/: config.json
